# inferverse

./: README.md  examples.py  pyproject.toml
docs/: api.md  modules.md
html_pages/: about.html  contact.html  index.html  inferverse_index.html
notebooks/: inferverse_verbs_colab.py  inferverse_verbs_marimo.py
scripts/: dedupe_records.py
src/inferverse/: __init__.py  core.py  visualize.py
tests/: test_infer_pipeline.py
