[project]
name = "inferverse"
version = "0.1.0"
description = "A tidy infer-inspired statistical inference toolkit for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "polars>=1.0.0",
  "scipy>=1.11.0",
  "statsmodels>=0.14.0",
  "altair>=5.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8.0.0"
]
